src/test/ui/regions/regions-nested-fns-2.nll.stderr
error[E0597]: `y` does not live long enough
  --> $DIR/regions-nested-fns-2.rs:18:25
   |
LL |         |z| {
   |          - has type `&'0 isize`
LL |             //~^ ERROR E0373
LL |             if false { &y } else { z }
   |                         ^ `y` would have to be valid for `'0`
LL |         });
LL | }
   | - ...but `y` is only valid for the duration of the `nested` function, so it is dropped here while still borrowed
   |
   = note: functions cannot return a borrow to data owned within the function's scope, functions can only return borrows to data passed as arguments
   = note: to learn more, visit <https://doc.rust-lang.org/book/second-edition/ch04-02-references-and-borrowing.html#dangling-references>

error: aborting due to previous error

For more information about this error, try `rustc --explain E0597`.
